[tool.poetry]
name = "viz-projekt"
version = "0.1.0"
description = ""
authors = ["Peter Poloni <polonipeto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dash = "2.18.2"
plotly = "5.24.1"
pandas = "2.2"
notebook = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
